--- a/packages/plugin-css/test/fixtures/base-selector/want.css
+++ b/packages/plugin-css/test/fixtures/base-selector/want.css
@@ -3,17 +3,17 @@
  * ------------------------------------------- */
 
 :host {
-  --foo: oklch(0.6334 0.2011 253.922);
+  --foo: oklch(63.34% 0.2011 253.9);
 }
 
 @media (color-gamut: p3) {
   :host {
-    --foo: oklch(0.6313 0.2184 253.284);
+    --foo: oklch(63.13% 0.2184 253.3);
   }
 }
 
 @media (color-gamut: rec2020) {
   :host {
-    --foo: oklch(0.6337 0.2187 254.2013);
+    --foo: oklch(63.37% 0.2187 254.2);
   }
 }
