--- a/packages/plugin-css/test/fixtures/ds-salesforce-lightning/want.css
+++ b/packages/plugin-css/test/fixtures/ds-salesforce-lightning/want.css
@@ -9,7 +9,7 @@
   --color-background-alt2: var(--color-gray3);
   --color-background-alt-inverse: var(--palette-blue20);
   --color-background-anchor: var(--color-gray3);
-  --color-background-backdrop: color(srgb 1 1 1 / 0.7490196078431373);
+  --color-background-backdrop: rgb(100% 100% 100%) / 0.7490196078431373);
   --color-background-backdrop-tint: var(--color-gray2);
   --color-background-browser: var(--color-gray9);
   --color-background-customer: var(--palette-orange70);
@@ -95,7 +95,7 @@
   --color-brand-darker: var(--palette-blue30);
   --color-contrast-primary: var(--color-gray3);
   --color-contrast-secondary: var(--color-gray3);
-  --color-gray1: color(srgb 1 1 1);
+  --color-gray1: rgb(100% 100% 100%);
   --color-gray2: color(srgb 0.9803921568627451 0.9803921568627451 0.9764705882352941);
   --color-gray3: color(srgb 0.9529411764705882 0.9490196078431372 0.9490196078431372);
   --color-gray4: color(srgb 0.9254901960784314 0.9215686274509803 0.9176470588235294);
@@ -147,9 +147,9 @@
   --color-text-link-focus: var(--palette-blue30);
   --color-text-link-hover: var(--palette-blue30);
   --color-text-link-inverse: var(--palette-neutral100);
-  --color-text-link-inverse-active: color(srgb 1 1 1 / 0.5019607843137255);
-  --color-text-link-inverse-disabled: color(srgb 1 1 1 / 0.14901960784313725);
-  --color-text-link-inverse-hover: color(srgb 1 1 1 / 0.7490196078431373);
+  --color-text-link-inverse-active: rgb(100% 100% 100%) / 0.5019607843137255);
+  --color-text-link-inverse-disabled: rgb(100% 100% 100%) / 0.14901960784313725);
+  --color-text-link-inverse-hover: rgb(100% 100% 100%) / 0.7490196078431373);
   --color-text-modal-button: var(--color-gray10);
   --color-text-placeholder: var(--color-gray9);
   --color-text-placeholder-inverse: var(--color-gray4);
@@ -253,15 +253,15 @@
   --palette-indigo95: color(srgb 0.9450980392156862 0.9529411764705882 0.984313725490196);
   --palette-neutral10: color(srgb 0.09411764705882353 0.09411764705882353 0.09411764705882353);
   --palette-neutral20: color(srgb 0.1803921568627451 0.1803921568627451 0.1803921568627451);
-  --palette-neutral30: color(srgb 0.26666666666666666 0.26666666666666666 0.26666666666666666);
+  --palette-neutral30: rgb(26.667% 26.667% 26.667%);
   --palette-neutral40: color(srgb 0.3607843137254902 0.3607843137254902 0.3607843137254902);
   --palette-neutral50: color(srgb 0.4549019607843137 0.4549019607843137 0.4549019607843137);
   --palette-neutral60: color(srgb 0.5764705882352941 0.5764705882352941 0.5764705882352941);
   --palette-neutral70: color(srgb 0.6823529411764706 0.6823529411764706 0.6823529411764706);
   --palette-neutral80: color(srgb 0.788235294117647 0.788235294117647 0.788235294117647);
   --palette-neutral90: color(srgb 0.8980392156862745 0.8980392156862745 0.8980392156862745);
-  --palette-neutral95: color(srgb 0.9529411764705882 0.9529411764705882 0.9529411764705882);
-  --palette-neutral100: color(srgb 1 1 1);
+  --palette-neutral95: rgb(95.294% 95.294% 95.294%);
+  --palette-neutral100: rgb(100% 100% 100%);
   --palette-orange10: color(srgb 0.12549019607843137 0.08627450980392157 0);
   --palette-orange15: color(srgb 0.21568627450980393 0.11764705882352941 0.011764705882352941);
   --palette-orange20: color(srgb 0.24313725490196078 0.16862745098039217 0.00784313725490196);
