--- a/packages/plugin-css/test/fixtures/ds-shopify-polaris/want.css
+++ b/packages/plugin-css/test/fixtures/ds-shopify-polaris/want.css
@@ -3,64 +3,64 @@
  * ------------------------------------------- */
 
 :root {
-  --color-black: color(srgb 0 0 0);
-  --color-blue: color(srgb 0 0.43529411764705883 0.7333333333333333);
-  --color-blue-dark: color(srgb 0.03137254901960784 0.3058823529411765 0.5411764705882353);
-  --color-blue-darker: color(srgb 0 0.0784313725490196 0.1607843137254902);
-  --color-blue-light: color(srgb 0.7058823529411765 0.8823529411764706 0.9803921568627451);
-  --color-blue-lighter: color(srgb 0.9215686274509803 0.9607843137254902 0.9803921568627451);
-  --color-blue-text: color(srgb 0.24313725490196078 0.3058823529411765 0.3411764705882353);
-  --color-green: color(srgb 0.3137254901960784 0.7215686274509804 0.23529411764705882);
-  --color-green-dark: color(srgb 0.06274509803921569 0.5019607843137255 0.2627450980392157);
-  --color-green-darker: color(srgb 0.09019607843137255 0.21176470588235294 0.18823529411764706);
-  --color-green-light: color(srgb 0.7333333333333333 0.8980392156862745 0.7019607843137254);
-  --color-green-lighter: color(srgb 0.8901960784313725 0.9450980392156862 0.8745098039215686);
-  --color-green-text: color(srgb 0.2549019607843137 0.30980392156862746 0.24313725490196078);
-  --color-indigo: color(srgb 0.3607843137254902 0.41568627450980394 0.7686274509803922);
-  --color-indigo-dark: color(srgb 0.12549019607843137 0.1803921568627451 0.47058823529411764);
-  --color-indigo-darker: color(srgb 0 0.023529411764705882 0.2235294117647059);
-  --color-indigo-light: color(srgb 0.7019607843137254 0.7372549019607844 0.9607843137254902);
-  --color-indigo-lighter: color(srgb 0.9568627450980393 0.9607843137254902 0.9803921568627451);
-  --color-indigo-text: color(srgb 0.24313725490196078 0.2549019607843137 0.3333333333333333);
-  --color-ink: color(srgb 0.12941176470588237 0.16862745098039217 0.21176470588235294);
-  --color-ink-light: color(srgb 0.27058823529411763 0.30980392156862746 0.3568627450980392);
-  --color-ink-lighter: color(srgb 0.38823529411764707 0.45098039215686275 0.5058823529411764);
-  --color-ink-lightest: color(srgb 0.5686274509803921 0.6196078431372549 0.6705882352941176);
-  --color-orange: color(srgb 0.9568627450980393 0.5764705882352941 0.25882352941176473);
-  --color-orange-dark: color(srgb 0.7529411764705882 0.3411764705882353 0.09019607843137255);
-  --color-orange-darker: color(srgb 0.2901960784313726 0.08235294117647059 0.01568627450980392);
-  --color-orange-light: color(srgb 1 0.7725490196078432 0.5450980392156862);
-  --color-orange-lighter: color(srgb 0.9882352941176471 0.9215686274509803 0.8588235294117647);
-  --color-orange-text: color(srgb 0.34901960784313724 0.26666666666666666 0.18823529411764706);
-  --color-purple: color(srgb 0.611764705882353 0.41568627450980394 0.8705882352941177);
-  --color-purple-dark: color(srgb 0.3137254901960784 0.1411764705882353 0.5607843137254902);
-  --color-purple-darker: color(srgb 0.13725490196078433 0 0.3176470588235294);
-  --color-purple-light: color(srgb 0.8901960784313725 0.8156862745098039 1);
-  --color-purple-lighter: color(srgb 0.9647058823529412 0.9411764705882353 0.9921568627450981);
-  --color-purple-text: color(srgb 0.3137254901960784 0.28627450980392155 0.35294117647058826);
-  --color-red: color(srgb 0.8705882352941177 0.21176470588235294 0.09411764705882353);
-  --color-red-dark: color(srgb 0.7490196078431373 0.027450980392156862 0.06666666666666667);
-  --color-red-darker: color(srgb 0.2 0.00392156862745098 0.00392156862745098);
-  --color-red-light: color(srgb 0.996078431372549 0.6784313725490196 0.6039215686274509);
-  --color-red-lighter: color(srgb 0.984313725490196 0.9176470588235294 0.8980392156862745);
-  --color-red-text: color(srgb 0.34509803921568627 0.23529411764705882 0.20784313725490197);
-  --color-sky: color(srgb 0.8745098039215686 0.8901960784313725 0.9098039215686274);
-  --color-sky-dark: color(srgb 0.7686274509803922 0.803921568627451 0.8352941176470589);
-  --color-sky-light: color(srgb 0.9568627450980393 0.9647058823529412 0.9725490196078431);
-  --color-sky-lighter: color(srgb 0.9764705882352941 0.9803921568627451 0.984313725490196);
-  --color-teal: color(srgb 0.2784313725490196 0.7568627450980392 0.7490196078431373);
-  --color-teal-dark: color(srgb 0 0.5176470588235295 0.5568627450980392);
-  --color-teal-darker: color(srgb 0 0.19215686274509805 0.20784313725490197);
-  --color-teal-light: color(srgb 0.7176470588235294 0.9254901960784314 0.9254901960784314);
-  --color-teal-lighter: color(srgb 0.8784313725490196 0.9607843137254902 0.9607843137254902);
-  --color-teal-text: color(srgb 0.25098039215686274 0.3254901960784314 0.3215686274509804);
-  --color-white: color(srgb 1 1 1);
-  --color-yellow: color(srgb 0.9333333333333333 0.7607843137254902 0);
-  --color-yellow-dark: color(srgb 0.5411764705882353 0.3803921568627451 0.08627450980392157);
-  --color-yellow-darker: color(srgb 0.3411764705882353 0.23137254901960785 0);
-  --color-yellow-light: color(srgb 1 0.9176470588235294 0.5411764705882353);
-  --color-yellow-lighter: color(srgb 0.9882352941176471 0.9450980392156862 0.803921568627451);
-  --color-yellow-text: color(srgb 0.34901960784313724 0.3176470588235294 0.18823529411764706);
+  --color-black: rgb(0% 0% 0%);
+  --color-blue: rgb(0% 43.529% 73.333%);
+  --color-blue-dark: rgb(3.1373% 30.588% 54.118%);
+  --color-blue-darker: rgb(0% 7.8431% 16.078%);
+  --color-blue-light: rgb(70.588% 88.235% 98.039%);
+  --color-blue-lighter: rgb(92.157% 96.078% 98.039%);
+  --color-blue-text: rgb(24.314% 30.588% 34.118%);
+  --color-green: rgb(31.373% 72.157% 23.529%);
+  --color-green-dark: rgb(6.2745% 50.196% 26.275%);
+  --color-green-darker: rgb(9.0196% 21.176% 18.824%);
+  --color-green-light: rgb(73.333% 89.804% 70.196%);
+  --color-green-lighter: rgb(89.02% 94.51% 87.451%);
+  --color-green-text: rgb(25.49% 30.98% 24.314%);
+  --color-indigo: rgb(36.078% 41.569% 76.863%);
+  --color-indigo-dark: rgb(12.549% 18.039% 47.059%);
+  --color-indigo-darker: rgb(0% 2.3529% 22.353%);
+  --color-indigo-light: rgb(70.196% 73.725% 96.078%);
+  --color-indigo-lighter: rgb(95.686% 96.078% 98.039%);
+  --color-indigo-text: rgb(24.314% 25.49% 33.333%);
+  --color-ink: rgb(12.941% 16.863% 21.176%);
+  --color-ink-light: rgb(27.059% 30.98% 35.686%);
+  --color-ink-lighter: rgb(38.824% 45.098% 50.588%);
+  --color-ink-lightest: rgb(56.863% 61.961% 67.059%);
+  --color-orange: rgb(95.686% 57.647% 25.882%);
+  --color-orange-dark: rgb(75.294% 34.118% 9.0196%);
+  --color-orange-darker: rgb(29.02% 8.2353% 1.5686%);
+  --color-orange-light: rgb(100% 77.255% 54.51%);
+  --color-orange-lighter: rgb(98.824% 92.157% 85.882%);
+  --color-orange-text: rgb(34.902% 26.667% 18.824%);
+  --color-purple: rgb(61.176% 41.569% 87.059%);
+  --color-purple-dark: rgb(31.373% 14.118% 56.078%);
+  --color-purple-darker: rgb(13.725% 0% 31.765%);
+  --color-purple-light: rgb(89.02% 81.569% 100%);
+  --color-purple-lighter: rgb(96.471% 94.118% 99.216%);
+  --color-purple-text: rgb(31.373% 28.627% 35.294%);
+  --color-red: rgb(87.059% 21.176% 9.4118%);
+  --color-red-dark: rgb(74.902% 2.7451% 6.6667%);
+  --color-red-darker: rgb(20% 0.39216% 0.39216%);
+  --color-red-light: rgb(99.608% 67.843% 60.392%);
+  --color-red-lighter: rgb(98.431% 91.765% 89.804%);
+  --color-red-text: rgb(34.51% 23.529% 20.784%);
+  --color-sky: rgb(87.451% 89.02% 90.98%);
+  --color-sky-dark: rgb(76.863% 80.392% 83.529%);
+  --color-sky-light: rgb(95.686% 96.471% 97.255%);
+  --color-sky-lighter: rgb(97.647% 98.039% 98.431%);
+  --color-teal: rgb(27.843% 75.686% 74.902%);
+  --color-teal-dark: rgb(0% 51.765% 55.686%);
+  --color-teal-darker: rgb(0% 19.216% 20.784%);
+  --color-teal-light: rgb(71.765% 92.549% 92.549%);
+  --color-teal-lighter: rgb(87.843% 96.078% 96.078%);
+  --color-teal-text: rgb(25.098% 32.549% 32.157%);
+  --color-white: rgb(100% 100% 100%);
+  --color-yellow: rgb(93.333% 76.078% 0%);
+  --color-yellow-dark: rgb(54.118% 38.039% 8.6275%);
+  --color-yellow-darker: rgb(34.118% 23.137% 0%);
+  --color-yellow-light: rgb(100% 91.765% 54.118%);
+  --color-yellow-lighter: rgb(98.824% 94.51% 80.392%);
+  --color-yellow-text: rgb(34.902% 31.765% 18.824%);
   --font-family-base: -apple-system, "BlinkMacSystemFont", "San Francisco", "Segoe UI", "Roboto", "Helvetica Neue", sans-serif;
   --font-family-mono: "Monaco", "Consolas", "Lucida Console", monospace;
   --space-base: 16px;
