--- a/packages/plugin-tailwind/test/fixtures/primer/want.css
+++ b/packages/plugin-tailwind/test/fixtures/primer/want.css
@@ -198,7 +198,7 @@
   --color-green-7: #013d14;
   --color-green-8: #003110;
   --color-green-9: #00230b;
-  --color-neutral-0: #ffffff;
+  --color-neutral-0: #fff;
   --color-neutral-1: #e7ecf0;
   --color-neutral-2: #ced5dc;
   --color-neutral-3: #acb6c0;
@@ -281,7 +281,7 @@
   --color-green-7: #008c2c;
   --color-green-8: #007728;
   --color-green-9: #006222;
-  --color-neutral-0: #ffffff;
+  --color-neutral-0: #fff;
   --color-neutral-1: #f0f3f6;
   --color-neutral-2: #d9dee3;
   --color-neutral-3: #bdc4cc;
