--- a/packages/plugin-css/test/fixtures/chained-selector/want.css
+++ b/packages/plugin-css/test/fixtures/chained-selector/want.css
@@ -3,45 +3,45 @@
  * ------------------------------------------- */
 
 :root {
-  --color-blue-6: color(srgb 0.0196078431372549 0.3137254901960784 0.6823529411764706);
+  --color-blue-6: rgb(1.9608% 31.373% 68.235%);
 }
 
 @media (prefers-color-scheme: light) and (prefers-contrast: high) {
   :root {
-    --color-blue-6: color(srgb 0.0196078431372549 0.3137254901960784 0.6823529411764706);
+    --color-blue-6: rgb(1.9608% 31.373% 68.235%);
   }
 }
 
 [data-color-mode="light"][data-product="default"], [data-color-mode="light"] [data-product="default"] {
-  --color-blue-6: color(srgb 0.0196078431372549 0.3137254901960784 0.6823529411764706);
+  --color-blue-6: rgb(1.9608% 31.373% 68.235%);
 }
 
 @media (prefers-color-scheme: light) and (prefers-contrast: high) {
   :root {
-    --color-blue-6: color(srgb 0.00784313725490196 0.23137254901960785 0.5843137254901961);
+    --color-blue-6: rgb(0.78431% 23.137% 58.431%);
   }
 }
 
 [data-color-mode="light"][data-contrast="high"][data-product="default"], [data-color-mode="light"][data-contrast="high"] [data-product="default"] {
-  --color-blue-6: color(srgb 0.00784313725490196 0.23137254901960785 0.5843137254901961);
+  --color-blue-6: rgb(0.78431% 23.137% 58.431%);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-blue-6: color(srgb 0.06666666666666667 0.34509803921568627 0.7803921568627451);
+    --color-blue-6: rgb(6.6667% 34.51% 78.039%);
   }
 }
 
 [data-color-mode="dark"][data-product="default"], [data-color-mode="dark"] [data-product="default"] {
-  --color-blue-6: color(srgb 0.06666666666666667 0.34509803921568627 0.7803921568627451);
+  --color-blue-6: rgb(6.6667% 34.51% 78.039%);
 }
 
 @media (prefers-color-scheme: dark) and (prefers-contrast: high) {
   :root {
-    --color-blue-6: color(srgb 0.19215686274509805 0.5450980392156862 0.9725490196078431);
+    --color-blue-6: rgb(19.216% 54.51% 97.255%);
   }
 }
 
 [data-color-mode="dark"][data-contrast="high"][data-product="default"], [data-color-mode="dark"][data-contrast="high"] [data-product="default"] {
-  --color-blue-6: color(srgb 0.19215686274509805 0.5450980392156862 0.9725490196078431);
+  --color-blue-6: rgb(19.216% 54.51% 97.255%);
 }
