--- a/packages/plugin-css/test/fixtures/color-scheme/want.css
+++ b/packages/plugin-css/test/fixtures/color-scheme/want.css
@@ -4,17 +4,17 @@
 
 :root {
   color-scheme: light dark;
-  --foo: oklch(0.6334 0.2011 253.922);
+  --foo: oklch(63.34% 0.2011 253.9);
 }
 
 @media (color-gamut: p3) {
   :root {
-    --foo: oklch(0.6313 0.2184 253.284);
+    --foo: oklch(63.13% 0.2184 253.3);
   }
 }
 
 @media (color-gamut: rec2020) {
   :root {
-    --foo: oklch(0.6337 0.2187 254.2013);
+    --foo: oklch(63.37% 0.2187 254.2);
   }
 }
