--- a/packages/plugin-css/test/fixtures/ds-radix/want.css
+++ b/packages/plugin-css/test/fixtures/ds-radix/want.css
@@ -20,7 +20,7 @@
   --color-bg-warn-hover: var(--color-primitive-amber-10);
   --color-overlay-black-1: color(srgb 0 0 0 / 0.05);
   --color-overlay-black-2: rgb(0% 0% 0% / 0.1);
-  --color-overlay-black-3: color(srgb 0 0 0 / 0.15);
+  --color-overlay-black-3: rgb(0% 0% 0% / 0.15);
   --color-overlay-black-4: color(srgb 0 0 0 / 0.2);
   --color-overlay-black-5: color(srgb 0 0 0 / 0.3);
   --color-overlay-black-6: color(srgb 0 0 0 / 0.4);
@@ -30,18 +30,18 @@
   --color-overlay-black-10: color(srgb 0 0 0 / 0.8);
   --color-overlay-black-11: color(srgb 0 0 0 / 0.9);
   --color-overlay-black-12: color(srgb 0 0 0 / 0.95);
-  --color-overlay-white-1: color(srgb 1 1 1 / 0.05);
-  --color-overlay-white-2: color(srgb 1 1 1 / 0.1);
-  --color-overlay-white-3: color(srgb 1 1 1 / 0.15);
-  --color-overlay-white-4: color(srgb 1 1 1 / 0.2);
-  --color-overlay-white-5: color(srgb 1 1 1 / 0.3);
-  --color-overlay-white-6: color(srgb 1 1 1 / 0.4);
-  --color-overlay-white-7: color(srgb 1 1 1 / 0.5);
-  --color-overlay-white-8: color(srgb 1 1 1 / 0.6);
-  --color-overlay-white-9: color(srgb 1 1 1 / 0.7);
-  --color-overlay-white-10: color(srgb 1 1 1 / 0.8);
-  --color-overlay-white-11: color(srgb 1 1 1 / 0.9);
-  --color-overlay-white-12: color(srgb 1 1 1 / 0.95);
+  --color-overlay-white-1: rgb(100% 100% 100%) / 0.05);
+  --color-overlay-white-2: rgb(100% 100% 100%) / 0.1);
+  --color-overlay-white-3: rgb(100% 100% 100%) / 0.15);
+  --color-overlay-white-4: rgb(100% 100% 100% / 0.2);
+  --color-overlay-white-5: rgb(100% 100% 100%) / 0.3);
+  --color-overlay-white-6: rgb(100% 100% 100% / 0.4);
+  --color-overlay-white-7: rgb(100% 100% 100%) / 0.5);
+  --color-overlay-white-8: rgb(100% 100% 100%) / 0.6);
+  --color-overlay-white-9: rgb(100% 100% 100%) / 0.7);
+  --color-overlay-white-10: rgb(100% 100% 100% / 0.8);
+  --color-overlay-white-11: rgb(100% 100% 100%) / 0.9);
+  --color-overlay-white-12: rgb(100% 100% 100%) / 0.95);
   --color-primitive-amber-1: color(srgb 0.996078431372549 0.9921568627450981 0.984313725490196);
   --color-primitive-amber-2: color(srgb 0.996078431372549 0.984313725490196 0.9137254901960784);
   --color-primitive-amber-3: color(srgb 1 0.9686274509803922 0.7607843137254902);
@@ -1314,7 +1314,7 @@
     --color-primitive-grass-10: color(srgb 0.3254901960784314 0.7019607843137254 0.396078431372549);
     --color-primitive-grass-11: color(srgb 0.44313725490196076 0.8156862745098039 0.5137254901960784);
     --color-primitive-grass-12: color(srgb 0.7607843137254902 0.9411764705882353 0.7607843137254902);
-    --color-primitive-gray-1: color(srgb 0.06666666666666667 0.06666666666666667 0.06666666666666667);
+    --color-primitive-gray-1: rgb(6.6667% 6.6667% 6.6667%);
     --color-primitive-gray-2: color(srgb 0.09803921568627451 0.09803921568627451 0.09803921568627451);
     --color-primitive-gray-3: color(srgb 0.13333333333333333 0.13333333333333333 0.13333333333333333);
     --color-primitive-gray-4: color(srgb 0.16470588235294117 0.16470588235294117 0.16470588235294117);
@@ -1711,7 +1711,7 @@
   --color-primitive-grass-10: color(srgb 0.3254901960784314 0.7019607843137254 0.396078431372549);
   --color-primitive-grass-11: color(srgb 0.44313725490196076 0.8156862745098039 0.5137254901960784);
   --color-primitive-grass-12: color(srgb 0.7607843137254902 0.9411764705882353 0.7607843137254902);
-  --color-primitive-gray-1: color(srgb 0.06666666666666667 0.06666666666666667 0.06666666666666667);
+  --color-primitive-gray-1: rgb(6.6667% 6.6667% 6.6667%);
   --color-primitive-gray-2: color(srgb 0.09803921568627451 0.09803921568627451 0.09803921568627451);
   --color-primitive-gray-3: color(srgb 0.13333333333333333 0.13333333333333333 0.13333333333333333);
   --color-primitive-gray-4: color(srgb 0.16470588235294117 0.16470588235294117 0.16470588235294117);
