--- a/www/src/styles/docs.css
+++ b/www/src/styles/docs.css
@@ -469,9 +469,9 @@
 .code-block-copy-btn {
   align-items: center;
   background: transparent;
-  border: 1px solid color(srgb 1 1 1 / 0.2);
+  border: 1px solid rgb(100% 100% 100% / 0.2);
   border-radius: var(--tz-radius-300);
-  color: color(srgb 1 1 1 / 0.75);
+  color: rgb(100% 100% 100% / 0.75);
   cursor: pointer;
   display: inline-flex;
   height: var(--tz-space-control-m);
@@ -486,8 +486,8 @@
   z-index: var(--tz-layer-base);
 
   &:hover {
-    background: color(srgb 1 1 1 / 0.1);
-    color: color(srgb 1 1 1 / 0.85);
+    background: rgb(100% 100% 100% / 0.1);
+    color: rgb(100% 100% 100% / 0.85);
   }
 }
 
